--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/magento-composer-installer": "*",
-        "mailgun/mailgun-php": "2.4.0",
-        "php-http/guzzle6-adapter": "^1.0"
+        "mailgun/mailgun-php": "~2.3.0",
+        "php-http/guzzle6-adapter": "^1.0",
+        "php-http/discovery": "1.3.0"
     },
     "autoload": {
         "psr-4": {
