--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mycademy/mailgun-magento2",
     "description": "Send Magento's transactional emails with the Mailgun API",
     "type": "magento2-module",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
         "magento/magento-composer-installer": "*",
         "mailgun/mailgun-php": "~2.4.0",
         "php-http/guzzle6-adapter": "^1.0",
