--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0",
         "magento/magento-composer-installer": "*",
         "mailgun/mailgun-php": "~2.4.0",
         "php-http/guzzle6-adapter": "^1.0",
