--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "mycademy/mailgun-magento2",
     "description": "Send Magento's transactional emails with the Mailgun API",
     "type": "magento2-module",
-    "version": "0.1.7",
+    "version": "0.1.6",
     "license": "MIT",
     "authors": [
         {
-            "name": "MyCademy",
-            "email": "info@mycademy.com",
-            "homepage": "https://mycademy.com"
+            "name": "Bogardo",
+            "email": "chris@bogardo.com",
+            "homepage": "http://bogardo.com/"
         }
     ],
     "require": {
@@ -17,9 +17,6 @@
         "mailgun/mailgun-php": "~2.4.0",
         "php-http/guzzle6-adapter": "^1.0",
         "php-http/discovery": "1.3.0"
-    },
-    "require-dev": {
-        "magento/product-community-edition": "2.3.5-p1"
     },
     "autoload": {
         "psr-4": {
